[Fixed] Expanding / collapsing nodes.

--- a/Typer.Web/Content/tree.css
+++ b/Typer.Web/Content/tree.css
@@ -1,4 +1,8 @@
-﻿*
+﻿body {
+    height: auto;
+}
+
+*
 {
     -moz-box-sizing: border-box !important;
     -webkit-box-sizing: border-box !important;
@@ -229,10 +233,10 @@ div.children-container
 .tree-selection-container
 {
     width: 100%;
-    margin-top: 6px;
+    margin-top: 12px;
     height: auto;
     padding: 0;
-    padding-top: 12px;
+    padding-top: 6px;
     border-top: 1px solid #555;
     overflow: hidden;
 }
@@ -254,5 +258,15 @@ div.children-container
 
 .tree-selection-line
 {
+    width: 100%;
+    height: 20px;
+    padding: 3px;
+    background-color: red;
+}
 
+tree-selection-line-remover {
+
+}
+
+tree-selection-line-caption {
 }
